--- a/src/App.scss
+++ b/src/App.scss
@@ -5,9 +5,12 @@
   font-family: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", ui-sans-serif,
     sans-serif;
+
+  transition: all 0.3s ease-in-out;
 }
 
 :root {
+  --space-5: 5px;
   --space-10: 10px;
   --space-15: 15px;
   --space-20: 20px;
@@ -27,7 +30,13 @@ body {
 
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   padding: 0;
   margin: 0;
 }
@@ -42,4 +51,49 @@ p, h1, h2, h3, h4, h5, h6 {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+}
+
+.btn {
+  cursor: pointer;
+  padding: var(--space-10) var(--space-20);
+  border-radius: var(--rounded-20);
+  border: none;
+  background: var(--color-text);
+  color: var(--color-bg);
+  width: 120px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: var(--space-5);
+
+
+  svg {
+    width: 18px;
+  }
+}
+
+.content-animation-Symbol {
+  animation: fadeInSymbol 0.5s cubic-bezier(.2, .8, .25, 1) both;
+}
+
+
+@keyframes fadeInSymbol {
+  0% {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 1);
+  }
+
+  60% {
+    opacity: 1;
+    transform: scale3d(1.2, 1.2, 1);
+  }
+
+  70% {
+    transform: scale3d(0.8, 0.8, 1);
+  }
+
+  100% {
+    transform: scale3d(1, 1, 1);
+  }
 }
