--- a/src/components/atoms/Square/Square.scss
+++ b/src/components/atoms/Square/Square.scss
@@ -14,7 +14,6 @@
     background: var(--square-bg);
     color: var(--color-text);
     cursor: pointer;
-    transition: transform 0.05s ease, background 0.2s ease;
     padding: var(--space-15);
     box-shadow: 0 2px 5px 1px #00000024 inset;
 
@@ -34,6 +33,16 @@
     &.winner {
         background: var(--square-winner-bg);
         border-color: var(--square-winner-border);
+
+        svg {
+            .pathTop {
+                fill: var(--color-icon-winner);
+            }
+
+            .pathBottom {
+                fill: var(--color-icon-footer-winner);
+            }
+        }
     }
 }
 
