--- a/src/components/molecules/Header/Header.scss
+++ b/src/components/molecules/Header/Header.scss
@@ -1,4 +1,5 @@
 .header {
+    margin-top: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -8,12 +9,13 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        
+
         span {
             font-size: 25px;
             font-weight: 600;
             margin-bottom: -5px;
         }
+
         p {
             font-size: 16px;
         }
