--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -22,8 +22,8 @@
   --color-text: #0f0f0f;
   --color-muted: #5f6775;
 
-  --color-icon: #0f0f0f;
-  --color-icon-footer: #5f6775;
+  --color-icon: #5f6775;
+  --color-icon-footer: #0f0f0f;
   --color-icon-winner: #22c55e;
   --color-icon-footer-winner: #1a9e52;
 
