--- a/src/components/molecules/Header/Header.scss
+++ b/src/components/molecules/Header/Header.scss
@@ -9,6 +9,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 80px;
 
         span {
             font-size: 25px;
