--- a/src/components/molecules/StartModal/StartModal.scss
+++ b/src/components/molecules/StartModal/StartModal.scss
@@ -31,7 +31,7 @@
             font-weight: 400;
             line-height: 1.5;
             opacity: .5;
-            color: white;
+            color: var(--color-text);
         }
     }
 
