--- a/src/components/molecules/WinnerModal/WinnerModal.scss
+++ b/src/components/molecules/WinnerModal/WinnerModal.scss
@@ -32,7 +32,7 @@
             font-weight: 400;
             line-height: 1.5;
             opacity: .5;
-            color: white;
+            color: var(--color-text);
         }
     }
 
@@ -43,6 +43,14 @@
 
     .header {
         /* Default: no highlight */
+    }
+    .buttons-content {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        gap: var(--space-10);
+        justify-content: center;
+
     }
 }
 
