--- a/src/App.scss
+++ b/src/App.scss
@@ -56,7 +56,7 @@ h6 {
   gap: var(--space-20);
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .btn {
@@ -67,6 +67,7 @@ h6 {
   background: var(--color-text);
   color: var(--color-bg);
   width: 120px;
+  min-height: 30px;
 
   display: flex;
   align-items: center;
