--- a/src/components/molecules/Header/Header.scss
+++ b/src/components/molecules/Header/Header.scss
@@ -1,5 +1,5 @@
 .header {
-    margin-top: auto;
+    // margin-top: auto;
     display: flex;
     align-items: center;
     justify-content: center;
