--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
 
   transition: all 0.3s ease-in-out;
 }
+
 html {
   transition: none !important;
 }
@@ -28,7 +29,7 @@ body {
   width: 100%;
   overflow: hidden;
   transition: background 0.3s ease-in-out;
-  
+
 
   #root {
     width: 100%;
@@ -48,15 +49,16 @@ h6 {
 }
 
 .App {
+  position: fixed;
+  inset: 0;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: var(--space-20);
-  margin: 0;
+  margin: auto;
   min-width: 320px;
-  min-height: 90dvh;
 }
 
 .btn {
@@ -109,30 +111,36 @@ h6 {
 @keyframes jello-horizontal {
   0% {
     -webkit-transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
   }
+
   30% {
     -webkit-transform: scale3d(1.25, 0.75, 1);
-            transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
   }
+
   40% {
     -webkit-transform: scale3d(0.75, 1.25, 1);
-            transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1);
   }
+
   50% {
     -webkit-transform: scale3d(1.15, 0.85, 1);
-            transform: scale3d(1.15, 0.85, 1);
+    transform: scale3d(1.15, 0.85, 1);
   }
+
   65% {
     -webkit-transform: scale3d(0.95, 1.05, 1);
-            transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1);
   }
+
   75% {
     -webkit-transform: scale3d(1.05, 0.95, 1);
-            transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1);
   }
+
   100% {
     -webkit-transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
   }
 }
